--- a/openldap/Dockerfile
+++ b/openldap/Dockerfile
@@ -4,3 +4,4 @@ ENV LDAP_ORGANISATION="Musobar Media" \
      LDAP_DOMAIN="musobarmedia.com"
 
 COPY bootstrap.ldif /container/service/slapd/assets/config/bootstrap/ldif/50-bootstrap.ldif
+ADD certs /container/service/slapd/assets/certs
