--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,15 @@ services:
         environment:
             LDAP_ADMIN_PASSWORD: test1234
             LDAP_BASE_DN: dc=musobarmedia,dc=com
+            LDAP_TLS: "true"
+            LDAP_TLS_CRT_FILENAME: "server.crt"
+            LDAP_TLS_KEY_FILENAME: "server.key"
+            LDAP_TLS_DH_PARAM_FILENAME: "dhparam.pem"
+            LDAP_TLS_CA_CRT_FILENAME: "server.crt"
+            LDAP_TLS_ENFORCE: "false"
+            LDAP_TLS_CIPHER_SUITE: "SECURE256:-VERS-SSL3.0"
+            LDAP_TLS_PROTOCOL_MIN: "3.1"
+            LDAP_TLS_VERIFY_CLIENT: "demand"
         ports:
             - 389:389
             - 636:636
